# jitvm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  allocator.h  allocator_posix.c  allocator_win.c  main.c
